# idun-agent-manager

./: .cursorignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  index.html  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
adk_agent_guide/: index.html
architecture/: index.html
contributing-docs/: index.html
docs/: GETTING_STARTED_MANAGER.md
examples/: index.html
getting-started/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/idun_agent_engine/: index.html
reference/idun_agent_engine/_version/: index.html
reference/idun_agent_engine/agent/: index.html
reference/idun_agent_engine/agent/base/: index.html
reference/idun_agent_engine/agent/crewai/: index.html
reference/idun_agent_engine/agent/langgraph/: index.html
reference/idun_agent_engine/agent/model/: index.html
reference/idun_agent_engine/cli/: index.html
reference/idun_agent_engine/core/: index.html
reference/idun_agent_engine/observability/: index.html
reference/idun_agent_engine/server/: index.html
search/: search_index.json
services/idun_agent_manager/: Dockerfile  README.md  __init__.py  main.py  settings.py
services/idun_agent_manager/domain/: schemas.py
services/idun_agent_manager/providers/: deployers.py  registries.py  retrievers.py
services/idun_agent_manager/services/: agent_service.py
services/idun_agent_manager/storage/: __init__.py  database.py  models.py
services/idun_agent_manager/web/: __init__.py  api.py
smol_agent_guide/: index.html
(+21 files in other folders)
